Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Fixed #1806 "Fields with errors have their error message not associated them
  and too far below".
New internal features
~~~~~~~~~~~~~~~~~~~~~
- metafactory's driven replay_profiles start by reinstalling the base profile
- doctest doc/developer/metafactory.txt doesn't depend on python-ldap anymore.