@@ -3,7 +3,8 @@ Requires
 -
 New features
 ~~~~~~~~~~~~
--
+- Enhancement #1807 : Provide a mean to publish all the contents of a tree
+  structure in one go.
 Bug fixes
 ~~~~~~~~~
 - Fixed #1806 "Fields with errors have their error message not associated them
